# ManualAid

./: .env.example  .gitignore  .markdownlint.yml  .prettierrc.yml  .pylintrc  CONTRIBUTING.md  CONTRIBUTING_ZH.md  README.md  README_ZH.md  environment.yml  eslint.config.mjs  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  linter.yml
docs/: CHANGELOG.md  CHANGELOG_ZH.md
scripts/: fix_fullwidth.py
src/console/: __init__.py  folder_picker.py  input_parser.py  main.py  result_manager.py
src/console/commands/: base.py  command_registry.py  launch_commands.py  registry.py  result_commands.py  system_commands.py  workspace_commands.py
src/console/handlers/: command_handler.py  tool_handler.py
src/console/ui/: formatters.py  interactive_viewer.py  repl.py  tui_console.py
src/constants/: commands.py  files.py  manual_aid.py  prompts.py  tools_docs.py
src/core/: agent_manager.py  audit_committer.py  config_manager.py  copy2clip.py  database_manager.py  file_tracker.py  input_parser.py  launcher.py  parse_func_call.py  paste_cache.py  paste_window.py  session_manager.py  skill_manager.py  tool_registry.py
src/models/: agent.py  result_entry.py  skill.py  tool_error_response.py
src/models/commands/: __init__.py  (+4 more)
src/utils/: binary_detector.py  generate_help_text.py  string_snapshot.py
src/workspace/: exclusion_manager.py  gitignore_loader.py  path_validator.py  permissions.py  workspace.py
tests/: test_input_parser.py  test_placeholder.py  test_string_snapshot.py
tests/core/: test_agent_manager.py  test_audit_committer.py  test_database_manager.py  test_file_tracker.py  test_parse_func_call.py  test_session_manager.py  test_tool_call_summaries.py  test_tool_error_response.py  test_tool_registry.py
tests/models/: test_agent.py
tests/utils/: test_binary_detector.py
tests/workspace/: test_path_validator.py  test_workspace.py
(+42 files in other folders)
