[project]
name = "ManualAid"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "click>=8.3",
    "rich>=15.0",
    "nest-asyncio",
    "pyperclip",
    "keyboard"
]

[project.scripts]
manualaid = "src.console.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=9.0",
    "pytest-cov>=7.1"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
extend-exclude = "fix_fullwidth.py"