[project]
name = "ManualAid"
version = "0.4.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "click>=8.3",
    "rich>=15.0",
    "nest_asyncio",
    "pyperclip",
    "keyboard",
    "python-dotenv"
]

[project.scripts]
manualaid = "main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=9.0",
    "pytest-cov>=7.1"
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
extend-exclude = "fix_fullwidth.py"